# funktrack

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.claude/skills/bevy-ecs-patterns/: SKILL.md
.claude/skills/bevy-ui-design/: SKILL.md
.github/workflows/: ci.yml
assets/songs/test_120bpm/: easy.ron  expert.ron  metadata.ron  normal.ron
assets/songs/test_140bpm/: hard.ron  metadata.ron
docs/: ARCHITECTURE.md  BEATMAP_FORMAT.md  CHART_GENERATION.md  GAME_DESIGN.md  RESOURCES.md  ROADMAP.md
src/: action.rs  audio.rs  beatmap.rs  calibration.rs  camera.rs  conductor.rs  config.rs  hud.rs  input.rs  judgment.rs  main.rs  notes.rs  particles.rs  path.rs  pause.rs  results.rs  scoring.rs  settings.rs  song_select.rs  state.rs  visuals.rs
src/editor/: actions.rs  camera.rs  io.rs  mod.rs  ui.rs  viewport.rs
tools/chart_gen/: Cargo.toml
tools/chart_gen/src/: beat.rs  chart.rs  decode.rs  difficulty.rs  main.rs  note_types.rs  onset.rs  path.rs  quantize.rs  stft.rs
